Create your own number function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AddNumberActivity"
             android:label="@string/title_activity_add_number" />
+        <activity
+            android:name=".NumbersActivity"
+            android:label="@string/title_activity_numbers" >
+        </activity>
     </application>
 
 </manifest>
