--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.teinproductions.tein.pitrainer" >
+    package="com.teinproductions.tein.pitrainer">
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:supportsRtl="true"
-        android:fullBackupContent="true"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.BlackText">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +26,8 @@
             android:label="@string/title_activity_add_number" />
         <activity
             android:name=".NumbersActivity"
-            android:label="@string/title_activity_numbers" >
-        </activity>
+            android:label="@string/title_activity_numbers"
+            android:theme="@style/AppTheme.BlackText" />
     </application>
 
 </manifest>
