Update SDK version, .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,4 @@
 /.idea
 .DS_Store
 /build
-/gradle
-/build.gradle
-/gradle.properties
-/gradlew
-/gradlew.bat
-/PiTrainer.iml
-/settings.gradle
-/app/build
-/app/src/androidTest
+*.iml
