--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.1'
     implementation 'com.android.support:cardview-v7:27.0.1'
     implementation 'com.android.support:design:27.0.1'
+    implementation 'com.google.firebase:firebase-core:11.6.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
