--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,5 +40,8 @@
 
         <activity android:name=".keyboard.KeyboardSizeActivity"
             android:label="@string/keyboard_size" />
+
+        <!-- FOR DEBUGGING: TODO REMOVE WHEN RELEASING-->
+        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
     </application>
 </manifest>
