Make Adaptive Icon using Image Asset Studio and update Gradle dependencies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,5 +43,8 @@
 
         <!-- FOR DEBUGGING: TODO REMOVE WHEN RELEASING-->
         <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
     </application>
 </manifest>
