--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.google.firebase:firebase-ads:18.1.0' // TODO fix support library version conflict
     implementation 'com.google.firebase:firebase-config:18.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
