--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,9 @@
         <activity android:name=".keyboard.KeyboardSizeActivity"
             android:label="@string/keyboard_size" />
 
-        <!-- FOR DEBUGGING: TODO REMOVE WHEN RELEASING-->
+        <!-- FOR DEBUGGING: REMOVE WHEN RELEASING-->
         <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+        <!-- Replace with AdMob App ID before release. Sample ad: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
