Increase no of digits for sqrt2 to 15K

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,13 +44,15 @@
             android:name=".keyboard.KeyboardSizeActivity"
             android:label="@string/keyboard_size" />
 
-        <!-- FOR DEBUGGING: REMOVE WHEN RELEASING-->
+        <!-- FOR DEBUGGING: COMMENT OUT WHEN RELEASING-->
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="false" />
+
+        <!-- Ads -->
         <!-- Replace with AdMob App ID before release. Sample ad: ca-app-pub-3940256099942544~3347511713 -->
-        <meta-data
+        <!--<meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
+            android:value="ca-app-pub-3940256099942544~3347511713"/>-->
     </application>
 </manifest>
